# mr-model-search-engine

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  next.config.js  package.json  tsconfig.json
backend/: README.md  database.csv
backend/processor/: CMakeLists.txt  README.md  database.csv  variables.h.in
backend/processor/feature_processor/: CMakeLists.txt  feature_processor.cpp  feature_processor.h
backend/processor/lib/libgdiam/: gdiam.cpp  gdiam.hpp  gdiam_test.cpp
backend/processor/multimedia_processor/: CMakeLists.txt  database.cpp  database.h  descriptors.cpp  descriptors.h  descriptors_global.cpp  descriptors_global.h  descriptors_shape.cpp  descriptors_shape.h  distance.cpp  distance.h  eigen_vectors.cpp  eigen_vectors.h  global_descriptors.cpp  global_descriptors.h  headers.h  model_statistics.cpp  model_statistics.h  multimedia_processor.cpp  multimedia_processor.h  preprocessor.cpp  preprocessor.h  utils.cpp  utils.h  vertex_properties.cpp  vertex_properties.h
backend/server/: README.md  file_validation.py  multimedia_processor.py  princeton_scraper.py  server.py
backend/server/query_upload/: README.md
frontend/model-viewer/: README.md  package-lock.json  package.json  tsconfig.json  vercelBuildStep.sh
frontend/model-viewer/public/: classes.csv  classes_info.csv
frontend/model-viewer/public/LabeledDB_new/: tcube_long_processed.off
frontend/model-viewer/public/PSBDatabase/: classes.json  closest_models.json  closest_models_ann.json  confusion_matrix.json  confusion_matrix_ann.json  dist_matrix.json  featureDescriptors.json  featureVector.json  feature_descriptors.json  feature_vectors.json  files.json  histogramNormStats.txt  histogramNormStatsP.csv  histogramNormStatsP.txt  index.ann  normalizationStats.json  normalizationStatsProcessed.csv  normalizationStatsUnprocessed.csv  normalization_stats.json
frontend/model-viewer/public/PSBDatabase/models/: 100_processed.off  101_processed.off  102_processed.off  103_processed.off  104_processed.off  105_processed.off  106_processed.off  107_processed.off  108_processed.off  109_processed.off  10_processed.off  110_processed.off  111_processed.off  112_processed.off  113_processed.off  114_processed.off  115_processed.off  116_processed.off  117_processed.off  118_processed.off  119_processed.off  11_processed.off  120_processed.off  121_processed.off  122_processed.off  123_processed.off  124_processed.off  125_processed.off  126_processed.off  127_processed.off  128_processed.off  129_processed.off  12_processed.off  130_processed.off  131_processed.off  132_processed.off  133_processed.off  134_processed.off  135_processed.off  136_processed.off  (+342 more)
frontend/model-viewer/public/PSBModels/: 125_processed.off  242_processed.off  tcube_long_processed.off
frontend/model-viewer/public/models/: 61.ply  m0f.off
frontend/model-viewer/src/components/: DescriptorHistograms.tsx  ModelDescriptors.tsx  ModelInformation.tsx  ModelSelector.tsx  Settings.tsx  TopClosestModels.tsx
frontend/model-viewer/src/components/ModelSelector/: ModelSelector.tsx  psb-filenames.json
frontend/model-viewer/src/components/charts/: Histogram.tsx
frontend/model-viewer/src/components/model-viewer/: ModelViewer.tsx  viewGL.ts  viewGL.tsx
frontend/model-viewer/src/data/: model-info.json
frontend/model-viewer/src/lib/: OBJLoader.ts  OFFLoader.ts  getModelDescriptors.ts  getModelStats.ts  getTopK.ts  getTopKClosest.ts  utils.ts
frontend/model-viewer/src/lib/contexts/: hooks.ts  index.tsx  reducer.ts
frontend/model-viewer/src/pages/: _app.tsx  generate-images.tsx  index.tsx
frontend/model-viewer/src/pages/api/: query.ts
frontend/model-viewer/src/styles/: globals.css
src/components/model-viewer/: ModelViewer.tsx  viewGL.tsx
src/pages/: _app.tsx
src/pages/api/: hello.ts
utils/: histogramNormStatsUnp.csv  normalizationStatsProcessed.csv  normalizationStatsToCSV.py  shape_to_latex_data.py  visualize_confusion_matrix.py
